test/all_output.txt
javac output ------------
Test.java:9: incompatible types
found   : java.lang.String
required: int
		int a = "xxx";
		        ^
Test.java:10: incompatible types
found   : int
required: java.lang.String
		String str = 45;
		             ^
Test.java:11: non-static method go() cannot be referenced from a static context
		go();
		^
3 errors

gcc output ------------
test.c: In function ‘main’:
test.c:10: error: request for member ‘x’ in something not a structure or union
test.c:11: warning: initialization makes integer from pointer without a cast
